@@ -16,7 +16,7 @@
 
 * Automation - There are many ways of automatic crafting, farming, resource gathering and even construction. Thanks to EnderIO, Mystical Agriculture, and Refined Storage.  
 
-* Building - This mod pack features many ways to build thanks to the mods Architect, ArchitectureCraft, Building Gadgets, Chisel, Chisel Unlimited, Chisel and Bits, Extra Bit Manipulation, Flat Colored Blocks, Little Frames, Little Tiles and Schematics. Anything you can think of and have the resources to make is possible. Save buildings and crafts and even export them. 
+* Building - This mod pack features many ways to build thanks to the mods Architect, ArchitectureCraft, Building Gadgets, Chisel, Chisel Unlimited, Chisel and Bits, Extra Bit Manipulation, Flat Colored Blocks, Little Frames, Little Tiles. Anything you can think of and have the resources to make is possible. Save buildings and crafts and even export them. 
 
 * Ever Scaling - Everything in the world scales. Enemies, Health, Hunger, Survival I would add TAN, but I do have a heart :D
 
@@ -44,9 +44,9 @@
 
 * -!Important!- I will no longer be up-keeping Technic Launcher. You must allow long file paths in Windows. You can use this registry modification or do your own research https://www.howtogeek.com/266621/how-to-make-windows-10-accept-file-paths-over-260-characters/ if you hate research grab and extract this zip https://www.howtogeek.com/wp-content/uploads/2016/08/Long-Path-Names-Hacks.zip just run the add the registry key.
 
-* Current Version - 65.0.2
+* Current Version - 66.0.0
 
-* Date - 3/6/2021 at 4:20am
+* Date - 3/24/2021 at 6:22pm
 
 # Launchers
 
@@ -62,11 +62,11 @@
 
 # Curseforge
 
-* https://www.dropbox.com/s/vjmthfg471p340p/Pixelmon%20BYOI-65.0.2.zip?dl=0
+* https://www.dropbox.com/s/0dkrwb34wocn8ax/Pixelmon%20BYOI-66.0.0.zip?dl=0
 
 # AIO Zipfile
 
-* https://www.dropbox.com/s/vjmthfg471p340p/Pixelmon%20BYOI-65.0.2.zip?dl=0
+* https://www.dropbox.com/s/0dkrwb34wocn8ax/Pixelmon%20BYOI-66.0.0.zip?dl=0
 
 ![Required Java Arguments](https://dl.dropboxusercontent.com/s/t4dmdud377upe2k/Required%20Java%20Args-v01.png?dl=1 "Required Java Arguments")
 
@@ -74,18 +74,175 @@
 
 -> -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+AlwaysPreTouch -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1 -Dusing.aikars.flags=https://mcflags.emc.gs -Daikars.new.flags=true -Dfml.ignorePatchDiscrepancies=true -Dfml.ignoreInvalidMinecraftCertificates=true -Xms512m <- 
 
+or 
+
+# Alternative Recommendations
+
+-> -XX:+AggressiveOpts -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSConcurrentMTEnabled -XX:ParallelGCThreads=4 -Dsun.rmi.dgc.server.gcInterval=1800000 -XX:+UnlockExperimentalVMOptions -XX:+ExplicitGCInvokesConcurrent -XX:MaxGCPauseMillis=50 -XX:+AlwaysPreTouch -XX:+UseStringDeduplication -Dfml.ignorePatchDiscrepancies=true -Dfml.ignoreInvalidMinecraftCertificates=true -XX:-OmitStackTraceInFastThrow -XX:+OptimizeStringConcat -XX:+UseAdaptiveGCBoundary -XX:NewRatio=3 -Dfml.readTimeout=90 -XX:+UseFastAccessorMethods <-
+
 * Java Version - Java 8 Latest = https://adoptopenjdk.net/?variant=openjdk8&jvmVariant=hotspot
 
 * Memory Minimum Allocation - 6.5GB (8.5GB)
 
-* Notes - Added a Button. It's in the escape menu.
+* Notes - Just updated removed a bunch of stuff. Added cooking and farming for blockheads.
 
 # Modlist
 
-![Notepad2_UwDjGHI2N2.png](https://i.imgur.com/IyYdH16.png)
-
-![](https://i.imgur.com/lsZ60sa.png)
-
-![](https://i.imgur.com/IBQrJkY.png)
-
-![](https://i.imgur.com/Kfx0btS.png)
+  [1.12.2] SecurityCraft v1.8.21.jar          
+  AbyssalCraft Integration-1.12.2-1.11.2.jar  
+  AbyssalCraft-1.12.2-1.10.3.jar              
+  antighost-1.12-forge14.21.1.2387-1.1.1.jar  
+  AppleCore-mc1.12.2-3.4.0.jar                
+  AppleSkin-mc1.12-1.0.14.jar                 
+  ApriTree-2.4.1.jar                          
+  Architect-MC1.12-1.2.0.6.jar                
+  architecturecraft-1.12-3.98.jar             
+  armoryexpansion-2.0.0-alpha.jar             
+  AttributeFix-1.12.2-1.0.10.jar              
+  AutoRegLib-1.3-32.jar                       
+  Baubles-1.12-1.5.2.jar                      
+  BetterAdvancements-1.12.2-0.1.0.77.jar      
+  bettercaves-1.12.2-2.0.4.jar                
+  BetterDiving-1.12.2-1.5.8.jar               
+  BetterMineshaftsForge-1.12.2-2.2.jar        
+  BetterPingDisplay-1.12.2-1.0.jar            
+  biolib-1.1.2.jar                            
+  BiomesOPlenty-1.12.2-7.0.1.2444-universal.jar
+  Botania r1.10-363.jar                       
+  BuildingGadgets-2.8.4.jar                   
+  champions-1.12.2-1.0.11.10.jar              
+  ChestTransporter-1.12.2-2.8.8.jar           
+  Chisel-MC1.12.2-1.0.2.45.jar                
+  chiselsandbits-14.33.jar                    
+  CompactVoidMiners-R1.11.jar                 
+  conarm-1.12.2-1.2.5.10.jar                  
+  Controlled Burn-1.12.2.022.jar              
+  Controlling-3.0.10.jar                      
+  CookingForBlockheads_1.12.2-6.5.0.jar       
+  CosmeticArmorReworked-1.12.2-v5a.jar        
+  CraftingTweaks_1.12.2-8.1.9.jar             
+  CraftTweaker2-1.12-4.1.20.625.jar           
+  CreativeCore_v1.10.47_mc1.12.2.jar          
+  CTM-MC1.12.2-1.0.2.31.jar                   
+  Cucumber-1.12.2-1.1.3.jar                   
+  Cyclic-1.12.2-1.20.8.jar                    
+  DeathQuotes-1.2.0-mc1.12-forge.jar          
+  DimensionalDoors-1.12.2-3.1.2-UNOFFICIAL.jar
+  EnderCore-1.12.2-0.5.76.jar                 
+  EnderIO-1.12.2-5.2.66.jar                   
+  EnderIO-endergy-1.12.2-5.2.66.jar           
+  EndReborn [0.3.9].jar                       
+  Exchangers-1.12.2-2.10.1.jar                
+  exposer-1.2.jar                             
+  ExtraBitManipulation-1.12.2-3.4.1.jar       
+  fairylights-2.2.0-1.12.2.jar                
+  fancymenu_1.7.1_MC_1.12-1.12.2.jar          
+  FantasticLib-1.12.2.044.jar                 
+  FarmingForBlockheads_1.12.2-3.1.28.jar      
+  FasterLadderClimbing-1.12-0.1-146.jar       
+  FastFurnace-1.12.2-1.3.1.jar                
+  FastLeafDecay-v14.jar                       
+  FastWorkbench-1.12.2-1.7.3.jar              
+  FeederHelmet-1.4.3.jar                      
+  flatcoloredblocks-mc1.12-6.8.jar            
+  foamfix-0.10.11-1.12.2.jar                  
+  Forgelin-1.8.4.jar                          
+  FTBLib-5.4.7.2.jar                          
+  FTBMoney-1.2.0.47.jar                       
+  FTBQuests-1202.9.0.15.jar                   
+  FTBUtilities-5.4.1.131.jar                  
+  gottagofast-1.1.jar                         
+  Growable Apricorns-2.0.0.jar                
+  GunpowderLib-1.12.2-1.1.jar                 
+  Hwyla-1.8.26-B41_1.12.2.jar                 
+  InventoryHud_1.12.2.forge-3.2.1.jar         
+  ironchest-1.12.2-7.0.72.847.jar             
+  ItemFilters-1.0.4.2.jar                     
+  ItemPhysic_Full_1.4.34_mc1.12.2.jar         
+  jei_1.12.2-4.16.1.302.jar                   
+  jeiintegration_1.12.2-1.6.0.jar             
+  journeymap-1.12.2-5.7.1.jar                 
+  just-enough-harvestcraft-1.12.2-1.7.2.jar   
+  JustEnoughIDs-1.0.3-55.jar                  
+  JustEnoughResources-1.12.2-0.9.2.60.jar     
+  konkrete_1.1.3_MC_1.12-1.12.2.jar           
+  lanserverproperties-1.0.jar                 
+  LargeFluidTank-12.5.2.jar                   
+  LibraryEx-1.12.2-1.2.1.jar                  
+  limelib-1.12.2-1.7.12.jar                   
+  LittleFrames_v1.0.5_mc1.12.2.jar            
+  LittleTiles_v1.5.0-pre327_mc1.12.2.jar      
+  LunatriusCore-1.12.2-1.2.0.42-universal.jar 
+  Mantle-1.12-1.3.3.55.jar                    
+  maxpotidext-1.0.3.jar                       
+  Mekanism-1.12.2-9.8.3.390.jar               
+  MekanismGenerators-1.12.2-9.8.3.390.jar     
+  memorycleaner-1.4.jar                       
+  Metallurgy-4-Reforged-1.2.5.jar             
+  MixinBootstrap-1.0.5.jar                    
+  MoreBuckets-1.12.2-1.0.4.jar                
+  morerefinedstorage-1.1.10.jar               
+  MouseTweaks-2.10-mc1.12.2.jar               
+  movingelevators-1.2.33-mc1.12.jar           
+  music_player-1.12.2-2.1.1.119.jar           
+  MysticalAdaptations-1.12.2-1.8.5.jar        
+  MysticalAgradditions-1.12.2-1.3.2.jar       
+  MysticalAgriculture-1.12.2-1.7.5.jar        
+  MysticalCreations-1.12.2-1.6.1.jar          
+  natura-1.12.2-4.3.2.69.jar                  
+  NetherEx-1.12.2-2.2.4.jar                   
+  nevoka-core-1.0.2.jar                       
+  NomadicTents-1.12.2-9.5.2.jar               
+  OreExcavation-1.4.150.jar                   
+  Pam's HarvestCraft 1.12.2zg.jar             
+  Patchouli-1.0-23.6.jar                      
+  performant-1.12.2-1.10.jar                  
+  phosphor-forge-mc1.12.2-0.2.7-universal.jar 
+  PickleTweaks-1.12.2-2.1.3.jar               
+  Pixelmon-1.12.2-8.1.2-universal.jar         
+  PixelmonInformation-1.12.2-8.0.0-0.3.7.jar  
+  Placebo-1.12.2-1.6.0.jar                    
+  Plants-1.12.2-2.10.7.jar                    
+  prefab-1.3.0.26.jar                         
+  projectstorage-1.12.2-1.3.jar               
+  Quark-r1.6-179.jar                          
+  randompatches-1.12.2-1.22.1.10.jar          
+  randomtweaks-1.12.2-2.8.3.1.jar             
+  rbmf_1.12-1.0.jar                           
+  RebornCore-1.12.2-3.19.4.529-universal.jar  
+  RebornStorage-1.12.2-3.3.4.1.jar            
+  refinedstorage-1.6.16.jar                   
+  refinedstorageaddons-0.4.5.jar              
+  refinedstoragerequestify-1.12.2-1.0.2-3.jar 
+  rsgauges-1.12.2-1.2.5.jar                   
+  scalingfeast-1.7.0.jar                      
+  ScalingHealth-1.12.2-1.3.42+147.jar         
+  SilentLib-1.12.2-3.0.14+168.jar             
+  SmoothFont-mc1.12.2-2.1.2.jar               
+  solcarrot-1.12.2-1.8.4.jar                  
+  SoundLimitExtends-1.12.2-1.0.jar            
+  SpiceOfLife-mc1.12-1.3.12.jar               
+  Stackie-1.12.2-1.6.0.48-universal.jar       
+  stellarfluidconduit-1.12.2-1.0.3.jar        
+  stg-1.12.2-1.2.3.jar                        
+  StorageTech R6.0.jar                        
+  stygian-1.0.4.jar                           
+  supersoundmuffler-revived_1.12.2_1.0.2.10.jar
+  TConstruct-1.12.2-2.13.0.183.jar            
+  tellme-1.12.2-0.7.0-dev.20200919.184303.jar 
+  TheBetweenlands-3.7.2-universal.jar         
+  tinker_io-1.12.2-rw2.8.3.jar                
+  tinkers_reforged-1.5.1.jar                  
+  TinkersComplement-1.12.2-0.4.3.jar          
+  tinkersdefense-1.4.2.38.jar                 
+  tinkersjei-1.2.jar                          
+  TinkerToolLeveling-1.12.2-1.1.0.jar         
+  Toast Control-1.12.2-1.8.1.jar              
+  tombstone-4.1.2-1.12.2.jar                  
+  tweakersconstruct-1.12.2-1.5.6.jar          
+  u_team_core-1.12.2-2.2.5.147.jar            
+  UnlimitedChiselWorks-0.3.4.jar              
+  WailaHarvestability-mc1.12-1.1.12.jar       
+  walljump-1.12.2-1.3.2.jar                   
+  Wawla-1.12.2-2.6.275.jar                    
+  Xtones-1.2.2.jar                            
